cluster/bedrock/nginx-gateway-fabric/public/templates/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: nginx-public
spec:
  gatewayClassName: nginx-public
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: public-tls
      allowedRoutes:
        namespaces:
          from: All
